# qt_demo

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: config.h  config.h.in  mainwindow.h
src/: app.qrc  app_win32.rc  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui
